# robot_toolkit

./: .gitignore  CMakeLists.txt  README.md  package.xml  robot_toolkit.kdev4  robot_toolkit.sh
.kdev4/: robot_toolkit.kdev4
include/robot_toolkit/: robot_toolkit.hpp  tools.hpp
include/robot_toolkit/audio_tools/mic/: mic_converter.hpp  mic_event.hpp  mic_localization_event.hpp
include/robot_toolkit/audio_tools/speech/: speech_subscriber.hpp
include/robot_toolkit/converter/: converter.hpp
include/robot_toolkit/event/: event.hpp
include/robot_toolkit/misc_tools/: .leds_subscriber.hpp.kate-swp
include/robot_toolkit/misc_tools/sonar/: sonar_converter.hpp  sonar_publisher.hpp
include/robot_toolkit/motion_tools/: animation_subscriber.hpp
include/robot_toolkit/navigation_tools/cmd_vel/: cmd_vel_subscriber.hpp
include/robot_toolkit/navigation_tools/free_zone/: free_zone_subscriber.hpp
include/robot_toolkit/navigation_tools/laser/: depth_to_laser_converter.hpp  laser_converter.hpp  laser_merged_converter.hpp  laser_publisher.hpp  naoqi_depth2laser_converter.hpp
include/robot_toolkit/navigation_tools/move_to/: move_to.hpp
include/robot_toolkit/navigation_tools/navigation_goal/: navigation_goal_subscriber.hpp
include/robot_toolkit/navigation_tools/odom/: odom_converter.hpp  odom_publisher.hpp
include/robot_toolkit/navigation_tools/result/: result_event.hpp
include/robot_toolkit/navigation_tools/robot_pose/: robot_pose_converter.hpp
include/robot_toolkit/navigation_tools/tf/: tf_converter.hpp  tf_publisher.hpp
include/robot_toolkit/publisher/: publisher.hpp
include/robot_toolkit/recorder/: global_recorder.hpp  recorder.hpp
include/robot_toolkit/subscriber/: subscriber.hpp
include/robot_toolkit/vision_tools/: camera_converter.hpp  camera_publisher.hpp  face_detector.hpp  face_publisher.hpp
launch/: robot_toolkit.launch
resources/: docker2pepper.bash  setToolkit.bash  toolkit2docker.bash
src/: main.cpp  robot_toolkit.cpp  robot_toolkit.sh  robot_toolkit_install
src/audio_tools/mic/: mic_converter.cpp  mic_converter.hpp  mic_event.cpp  mic_event.hpp  mic_localization_event.cpp  mic_publisher.cpp  mic_publisher.hpp
src/audio_tools/speech/: speech_subscriber.cpp  speech_subscriber.hpp
src/converters/: converter_base.hpp
src/helpers/: filesystem_helpers.hpp  toolkit_helpers.cpp  toolkit_helpers.hpp
src/misc_tools/: leds_subscriber.cpp
src/misc_tools/special_settings/: special_settings_subscriber.cpp
src/motion_tools/: animation_subscriber.cpp
src/navigation_tools/cmd_vel/: cmd_vel_subscriber.cpp  cmd_vel_subscriber.hpp
src/navigation_tools/laser/: depth_to_laser_converter.cpp  laser_converter.cpp  laser_converter.hpp  laser_publisher.cpp  naoqi_depth2laser_converter.cpp
src/navigation_tools/move_to/: move_to.cpp
src/navigation_tools/odom/: odom_converter.cpp  odom_converter.hpp  odom_publisher.cpp  odom_publisher.hpp
src/navigation_tools/result/: result_event.cpp
src/navigation_tools/tf/: tf_converter.cpp  tf_converter.hpp  tf_publisher.cpp  tf_publisher.hpp
src/recorders/: global_recorder.cpp
src/robot_toolkit/: CMakeLists.txt  package.xml
src/robot_toolkit/include/robot_toolkit/: robot_toolkit.hpp  ros_environment.hpp  tools.hpp
src/robot_toolkit/include/robot_toolkit/publisher/: publisher.hpp
src/robot_toolkit/include/robot_toolkit/recorder/: global_recorder.hpp  recorder.hpp
src/robot_toolkit/launch/: robot_toolkit.launch
src/robot_toolkit/src/: autoload_registration.cpp  main.cpp  robot_toolkit.cpp
src/robot_toolkit/src/converters/: converter_base.hpp  joint_state.cpp  joint_state.hpp  nao_footprint.hpp  navigation_tools.cpp  navigation_tools.hpp
src/robot_toolkit/src/helpers/: filesystem_helpers.hpp  recorder_helpers.hpp  toolkit_helpers.cpp  toolkit_helpers.hpp
src/robot_toolkit/src/laser_tools/converters/: laser_tools.cpp  laser_tools.hpp
src/robot_toolkit/src/laser_tools/publishers/: .lasers.hpp.kate-swp  laser_tools.cpp  laser_tools.hpp
src/robot_toolkit/src/navigation_tools/converters/: navigation_tools.cpp  navigation_tools.hpp  odom.cpp  odom.hpp
src/robot_toolkit/src/navigation_tools/laser/: laser_converter.cpp  laser_publisher.hpp
src/robot_toolkit/src/navigation_tools/odom/: odom_converter.hpp
src/robot_toolkit/src/navigation_tools/publishers/: navigation_tools.cpp  navigation_tools.hpp
src/robot_toolkit/src/navigation_tools/subscribers/: cmd_vel.cpp  cmd_vel.hpp
src/robot_toolkit/src/navigation_tools/tf/: tf_publisher.cpp  tf_publisher.hpp
src/robot_toolkit/src/odom_tools/converters/: odom_tools.cpp  odom_tools.hpp
src/robot_toolkit/src/odom_tools/publishers/: odom_tools.cpp  odom_tools.hpp
src/robot_toolkit/src/publishers/: joint_state.cpp  joint_state.hpp  navigation_tools.cpp  navigation_tools.hpp
src/robot_toolkit/src/recorders/: globalrecorder.cpp  joint_state.cpp  joint_state.hpp
src/robot_toolkit/src/tools/: robot_description.cpp  robot_description.hpp
src/subscribers/: base_subscriber.hpp
src/tools/: robot_description.cpp  robot_description.hpp
src/vision_tools/: camera_converter.cpp  camera_converter.hpp  camera_publisher.cpp  camera_publisher.hpp  face_detector.cpp  face_tracker.cpp
wiki/images/misc_tools/: misc_tools_diagram.drawio
wiki/images/motion_tools/: motion_tools_diagram.drawio
wiki/images/navigation_tools/: navigation_tools_diagram.drawio
wiki/images/vision_tools/: vision_tools_diagram.drawio
